<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvPleaseCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/make_your_account"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/tvPleaseCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username3"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="24dp"/>

    <EditText
        android:id="@+id/etRegisterName"
        android:layout_below="@+id/etRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/your_name"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="24dp"/>

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_below="@+id/etRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password3"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_lock_person_24"
        android:drawablePadding="24dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_below="@id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/tvLoginHere"
        android:layout_below="@id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_account_login_here"/>

</RelativeLayout>